# card-server

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
card_auto_add/: __main__.py  config.py  ioc.py  known_github_installs.json  old_main.py  plugin_loader.py  plugin_worker.py
card_auto_add/loops/: active_cards_watcher.py
card_auto_add/plugins/: config.py  error_handling.py  interfaces.py  setup.py  types.py
card_auto_add/windsx/: activations.py  card_holders.py  card_scan.py
card_auto_add/workers/: card_pushed_watcher.py  card_scan_watcher.py  comm_server_restarter.py  database_file_watcher.py  door_override_controller.py  dsx_hardware_reset_worker.py  events.py  github_watcher.py  plugin_worker.py  update_callback_watcher.py  utils.py  worker_event_loop.py
card_automation_server/: __main__.py  config.py  ioc.py  known_github_installs.json  loki_logging.py  plugin_loader.py
card_automation_server/plugins/: config.py  interfaces.py  setup.py  types.py
card_automation_server/windsx/: engines.py
card_automation_server/workers/: card_pushed_watcher.py  card_scan_watcher.py  comm_server_restarter.py  comm_server_socket_listener.py  database_file_watcher.py  door_override_controller.py  dsx_hardware_reset_worker.py  events.py  expired_holiday_cleaner.py  github_watcher.py  plugin_worker.py  restart_file_watcher.py  update_callback_watcher.py  utils.py  worker_event_loop.py
tests/: conftest.py  test_acl_group_combo.py  test_ioc.py  test_loki_logging.py
tests/db/: test_acl_group_combo.py  test_company.py  test_name.py  test_person.py
(+41 files in other folders)
